[gd_scene load_steps=5 format=3 uid="uid://p2xuj2cpu25b"]

[ext_resource type="Script" path="res://win_screen.gd" id="1_hsle1"]
[ext_resource type="Texture2D" uid="uid://bi7uuyn43wvd5" path="res://background.jpg" id="2_g0tvi"]
[ext_resource type="FontFile" uid="uid://bq7qopwm52n6m" path="res://card_assets/text_settings/fonts/DS-DIGIT.TTF" id="2_lymho"]
[ext_resource type="Theme" uid="uid://7miaudw2s7n0" path="res://UI settings/button_theme.tres" id="4_6ejls"]

[node name="Node" type="Node"]
script = ExtResource("1_hsle1")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0, 0.360784, 0.0313726, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g0tvi")
expand_mode = 2

[node name="win_label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -90.0
offset_right = 114.5
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lymho")
theme_override_font_sizes/font_size = 64
text = "<Spiller> vant!"

[node name="ButtonReturn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = 115.0
offset_right = 214.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6ejls")
text = "Tilbake til hovedmenyen"

[node name="ButtonQuit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = 228.0
offset_right = 114.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6ejls")
text = "Lukk Spillet"

[connection signal="pressed" from="ButtonReturn" to="." method="_on_button_return_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
